--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"], // ✅ Only this — NO "node"
+    "types": ["vite/client", "node"], // ✅ Added Node types
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
